--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width,initial-scale=1.0,user-scalable=no" name="viewport">
-  <meta content="#00338C" name="theme-color">
+  <meta content="#0A3F9C" name="theme-color">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 
